# toolkit-205

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE.txt  Pipfile  README.md  dodo.py  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: build-and-test.yml  validate-and-build-with-poetry.yml
cmake/: get_lib_repo_local.cmake  update_lib_repo_ci.cmake  update_lib_repo_local.cmake
config/: templates.json
data_viewer/: DX-Constant-Efficiency.RS0004.a205.json  DX-Constant-Efficiency.RS0004.a205.xlsx  DX-Constant-Efficiency.RS0004.a205.yaml  README.md  python_environment.txt  rs_vars.yaml  test_schema_yaml.ipynb
data_viewer/examples/: ASHRAE90-1-2019-bd-Curve-Set-AA.RS0001.a205.json  DX-Constant-Efficiency.RS0004.a205.json  Drive-Constant-Efficiency.RS0006.a205.json  Fan-Continuous.RS0003.a205.json  HPDM.RS0004.a205.json  Motor-Constant-Efficiency.RS0005.a205.json  Unitary-Constant-Efficiency.RS0002.a205.json  residential-dx.RS0004.json  residential-fan.RS0003.json  residential-motor.RS0005.json
dv205/: README.md  file_io2.py  gen_205_dict.py  json_plot.py  plot_streamlit.py  streamlit_plot.py  test_file_picker.py  test_load.ipynb
dv205/.streamlit/: config.toml
dv205/assets/: style.css
dv205/examples/: Belt-Drive-Constant-Efficiency.RS0007.a205.json  Chiller-Constant-Efficiency.RS0001.a205.json  residential-unitary.RS0002.json
dv205/test/: test_css.py  test_dash.py  test_streamlit.py
dv205/test/streamlit_custom_gui-main/: application.py
dv205/test/streamlit_custom_gui-main/.streamlit/: config.toml
examples/: CMakeLists.txt
examples/cbor/: RS0001ExampleFile.cbor  RS0002ExampleFile.cbor  RS0002SimpleExampleFile.cbor  RS0003ExampleFile-continuous.cbor  RS0003ExampleFile-discrete.cbor
examples/cpp-reader/: CMakeLists.txt  chiller.cpp
examples/json/: RS0001ExampleFile.json  RS0002ExampleFile.json  RS0002SimpleExampleFile.json  RS0003ExampleFile-continuous.json  RS0003ExampleFile-discrete.json
examples/python-writer/: CMakeLists.txt  chiller-example.xlsx  chiller.py
libtk205/: CMakeLists.txt
libtk205/cmake/: copy_autogenerated_files.cmake  copy_base_class_files.cmake  update_lib_repo.cmake
libtk205/include/: RS0001_factory.h  RS0002_factory.h  RS0003_factory.h  RS0004_factory.h  RS0005_factory.h  RS0006_factory.h  RS_instance_base.h  RS_instance_factory.h  error_handling_tk205.h  grid_variables_base.h  libtk205.h  loadobject_205.h  lookup_variables_base.h  performance_map_base.h  typeinfo_205.h
libtk205/src/: RS0001_factory.cpp  RS0002_factory.cpp  RS0003_factory.cpp  RS0004_factory.cpp  RS0005_factory.cpp  RS0006_factory.cpp  RS_instance_factory.cpp  error_handling_tk205.cpp  libtk205.cpp  load.cpp  rs_instance_factory.cpp
libtk205/test/: CMakeLists.txt  fixtures_libtk205.hpp  main_libtk205.cpp
old_libtk205/: CMakeLists.txt
old_libtk205/test/: fixtures_libtk205.hpp  main_libtk205.cpp
schema/: 0001.fbs  0002.fbs  0003.fbs  ASHRAE205.fbs  ASHRAE205.schema.json  Front.fbs  RS0001.schema.json  RS0001ExampleFile.json  RS0002.schema.json  RS0002ExampleFile.json  RS0003.schema.json  RS0003ExampleFile-continuous.json  RS0003ExampleFile-discrete.json  RS0003ExampleFile.json  TestValidate.py  definitions.schema.json
test/: test_tk205.py  test_tk205_process.py  test_tk205_unit.py
test/bad-examples/: empty.json  invalid-RS_instance.json
tk205/: __init__.py  cli.py  commonschema.py  file_io.py  generic_node.py  generic_tree.py  metaschema.py  schema.py  tree_schema.py  util.py  xlsx.py
web/: open205_generator.py  web-content.py
web/assets/examples/RS0001ExampleFile/: RS0001ExampleFile.a205.cbor  RS0001ExampleFile.a205.json  RS0001ExampleFile.a205.xlsx  RS0001ExampleFile.a205.yaml
web/assets/examples/RS0002ExampleFile/: RS0002ExampleFile.a205.cbor  RS0002ExampleFile.a205.json  RS0002ExampleFile.a205.xlsx  RS0002ExampleFile.a205.yaml
web/assets/examples/RS0002SimpleExampleFile/: RS0002SimpleExampleFile.a205.cbor  RS0002SimpleExampleFile.a205.json  RS0002SimpleExampleFile.a205.xlsx  RS0002SimpleExampleFile.a205.yaml
web/assets/examples/RS0003ExampleFile-continuous/: RS0003ExampleFile-continuous.a205.cbor  RS0003ExampleFile-continuous.a205.json  RS0003ExampleFile-continuous.a205.xlsx  RS0003ExampleFile-continuous.a205.yaml
web/assets/examples/RS0003ExampleFile-discrete/: RS0003ExampleFile-discrete.a205.cbor  RS0003ExampleFile-discrete.a205.json  RS0003ExampleFile-discrete.a205.xlsx  RS0003ExampleFile-discrete.a205.yaml
web/assets/schema/: ASHRAE205.schema.json  RS0001.schema.json  RS0002.schema.json  RS0003.schema.json
web/assets/styles/: style.css
web/assets/templates/: RS0001-template.a205.xlsx  RS0002-template.a205.xlsx  RS0003-template.a205.xlsx
web/generator/: jinja_attempt.py
web/generator/templates/: base.html  examples_template.html  header_template.html
web/markdown-content/: about.md  examples.md  schema.md  templates.md  tk205.md
web/templates/: about_template.html  base.html  examples_template.html  header_template.html  schema_template.html  templates_template.html  tk205_template.html
