[tool.poetry]
name = "tk205"
version = "1.0.0"
description = ""
authors = ["Open205"]

[tool.poetry.dependencies]
python = "^3.7"
click = "*"
jsonschema = "*"
cbor2 = "*"
openpyxl = "*"
pyyaml = "*"
jinja2 = "*"
schema205 = { path = "schema-205", develop = true }

[tool.poetry.dev-dependencies]
pylint = "*"
pytest = "^7.1.3"
markdown = "*"
doit = "*"
tomli = "2.0.1"
pygit2 = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
